--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
            <li>MYsQL</li>
         </ul>
     </div>
+       <center>   <img src="pngwing.com.png" width="150px" height="150px"> </center>
     <div class="first">
         <h2 class="course1">Java Full Stack Internship</h2>
         <ul type="radio">
