--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
    <div>
     <header>
         <center>
-       <img src="scope-india-logo-home-page.png" alt="scope" width="300px" height="180px">
+       <img src="scope-india-logo-home-page.png" alt="scope" width="350px" height="180px">
        <h2>SCOPE INDIA, your career partner!</h2>
        <p>One of India's best Training destinations for Software, Networking,<br> and Cloud Computing courses with 17 years of Industrial experience.</p>
+       <img src="https://scopeindia.org/images/5star.png" width="15%">
+       <p class="p1">Software, Networking, and Cloud Professional Education Centre in Kerala and Tamil Nadu from Suffix E Solutions with WORKING PROFESSIONALS oriented on-the-job TRAINING model. SCOPE INDIA provides courses for Software Programming in Python (Data Science | Artificial Intelligence | Machine Learning | Deep Learning, Data Analytics), Java, PHP, .Net, MERN,Software Testing Manual and Automation, Cloud Computing (AWS | Azure), Server Administration (MicroSoft MCSE | Linux RHCE), Networking (CCNA), DevOps, Mobile App Development in Flutter, and Digital Marketing. A Training with a 100% Trusted Job-Based Internship Model. SCOPE INDIA has a Strong Placement Cell that provides jobs to thousands of students annually. We assure you, you won't regret it after training from SCOPE INDIA!
 
+         This is how SCOPE INDIA can support both newbies and those experienced in the industry to upgrade their skills.</p>
        </center>
     </header>
-  <div class="box">
+  <!-- <div class="box">
     <div>
         <h2 class="course1">Java Full Stack Internship</h2>
         <ul type="radio">
@@ -62,8 +65,19 @@
            <li>Java</li>
            <li>Java</li>
            <li>Java</li>
-        </ul>
-  </div>
+        </ul> -->
+     <div class="grid">
+      <div class="grid02"> Recent Placement </div> 
+     </div>
+     <div class="grid1">
+       <div class="grid03"> Courses </div>
+     </div>
+     <div class="grid2">
+      <div class="grid04">Register Now</div>
+     </div>
+     <div class="grid3">
+      <div class="grid05"> Call Us On whatsapp </div> 
+     </div>
 </body>
 
 </html>
